# mesh-tools

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ccache.cmake  clang-format.cmake  clang-tidy.cmake  git.cmake  include_vendor_pkg.cmake  module.cmake  module_tests.cmake  objective_cpp.cmake
modules/: CMakeLists.txt
modules/ao/: CMakeLists.txt
modules/ao-cli/: CMakeLists.txt
modules/ao-cli/src/: main.cpp
modules/ao/include/meshtools/ao/: ao.hpp
modules/ao/src/: ao.cpp  rasterize.hpp  raytrace.cpp  raytrace.hpp
modules/core/: CMakeLists.txt
modules/core/include/meshtools/: algorithm.hpp  file.hpp  image.hpp  logging.hpp  math.hpp  result.hpp  size.hpp  span.hpp  string.hpp  vec2.hpp  vec3.hpp
modules/core/src/: image.cpp  logging.cpp
modules/core/src/logging/: logging.cpp
modules/models/: CMakeLists.txt
modules/models/include/meshtools/models/: attribute_type.hpp  extras.hpp  material.hpp  mesh.hpp  mesh_data.hpp  mesh_group.hpp  model.hpp  node.hpp  sampler.hpp  texture.hpp
modules/models/src/: attribute_type.cpp  mesh.cpp  mesh_group.cpp  model.cpp
modules/models/src/gltf/: gltf_impl.cpp  gltf_impl.hpp  model.cpp  model.hpp
modules/uvmap/: CMakeLists.txt
modules/uvmap/include/meshtools/uv/: atlas.hpp
modules/uvmap/src/: atlas.cpp
scripts/: .gitignore  diffimages.js  package.json
test/: CMakeLists.txt
test/common/: test.hpp
test/core/: CMakeLists.txt  algorithm.test.cpp  span.test.cpp
test/fixtures/models/: basic-uvs.gltf  basic.gltf  cube.gltf
test/models/: CMakeLists.txt  attribute_type.test.cpp  mesh_data.test.cpp  mesh_group.test.cpp  model.test.cpp
